--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.12.5",
+    "mitt": "^3.0.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
