--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mitt": "^3.0.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "eslint": "^8",
