--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
